--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -17,21 +17,18 @@
                 </thead>
                 <tbody>
                 <tr th:each="carro : ${carrito.ids}">
-                    <th scope="row">
+                    <td>
                         <img class="width-minicards-carrito object-fit-cover mb-1"
                              th:src="@{/img/productes/{article}/{prop}/0.jpg(article=${carro.propietats.article.id},prop=${carro.propietats.id})}">
-                    </th>
+                    </td>
                     <td th:text="${carro.propietats.article.nom}"></td>
                     <td th:text="${carro.propietats.preu}"></td>
-                    <td>
-                        <div class="d-flex flex-row">
-                            <form th:action="@{/updatecarrito}" method="get">
-                                <input hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
-                                <input id="quantitat" name="quantitat" class="form-control border border-secondary" type="number" min="1" th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
-                                <button type="submit" class="btn btn-primary"><i class="bi bi-arrow-clockwise"></i>
-                                </button>
-                            </form>
-                        </div>
+                    <td class="row">
+                        <form th:action="@{/updatecarrito}" method="get">
+                            <input type="hidden" hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
+                            <input id="quantitat" name="quantitat" class="col" type="number" min="1" th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
+                            <button type="submit" class="btn btn-pc-economic-light col"><i class="bi bi-arrow-clockwise"></i></button>
+                        </form>
                     </td>
                     <td th:text="${carro.price}"></td>
                     <td>
@@ -45,7 +42,7 @@
             <div class="d-flex flex-row-reverse">
                 <div class="p-2">
                     <h3>Total: <span th:text="${carrito.total}"></span></h3>
-                    <button class="btn btn-pc-economic-dark col-5">Comprar</button>
+                    <button class="btn btn-pc-economic-dark">Comprar</button>
                 </div>
             </div>
 
