--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
   <head th:replace="layout/layout :: head">
   </head>
   <body>
-    <header th:replace="layout/layout :: navbar"></header>i
+    <header th:replace="layout/layout :: navbar"></header>
     <div th:if="${param.error}">
       Invalid username and password.
     </div>
