--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -99,7 +99,7 @@
                     for (var a of resp) {
                         if (a.principal === true && a.propietats.id != idPropietat && a.propietats.article.id == idArticle) {
                             $('#articles-disponibles').append(
-                                '<a href="http://localhost:8080/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
+                                '<a href="/article/' + a.propietats.article.id + '/' + a.propietats.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
                                 '<span class="text-end h4 text-pc-economic-default bold ">' + a.propietats.preu + ' € </span>' +
                                 '<img src="/img/productes/' + a.propietats.article.id + '/' + a.propietats.id + '/' + a.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
                                 '<div id="' + a.propietats.id + '" class="row justify-content-around col-12"></div>' +
