--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -33,13 +33,15 @@
                     </ul>
                 </div>
                 <!-- Cercador -->
-                <div class="mx-auto order-2 col-xs-8 col-7">
-                    <div class="col-12 d-flex align-items-center">
-                            <select class="my-auto" id="cercador"><option disabled selected>Buscador</option></select>
-                            <button class="btn btn-pc-economic-dark mx-1" id="cercar">
-                                <i class="bi bi-search"></i>
-                            </button>
+                <div class="order-2 col-xs-8 col-7 d-flex">
+                    <div class="my-auto col-10">
+                        <select id="cercador">
+                            <option disabled selected>Buscador</option>
+                        </select>
                     </div>
+                    <button class="btn btn-pc-economic-dark mx-1 col" id="cercar">
+                        <i class="bi bi-search"></i>
+                    </button>
                 </div>
                 <!-- Login + Carrito -->
                 <div class="d-flex justify-content-center d-md-none d-block mx-1">
@@ -57,6 +59,11 @@
                         <li class="nav-item d-flex justify-content-center ">
                             <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/login}">
                                 <i class="bi bi-person"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item d-flex justify-content-center ">
+                            <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/login}">
+                                <i class="bi bi-translate"></i>
                             </a>
                         </li>
                         <li class="nav-item d-flex justify-content-center ">
@@ -86,7 +93,6 @@
             <div class="offcanvas-body" id="canvasBody">
             </div>
         </div>
-
     </header>
     <footer
             class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container bg-cont"
@@ -97,7 +103,6 @@
             Tapereres, 32, 07500 Manacor, Balearic Islands
         </p>
     </footer>
-
     <div th:fragment="jquery">
         <script
                 crossorigin="anonymous"
@@ -111,7 +116,6 @@
                 url: "/api/articles",
                 type: "GET",
                 success: function (data) {
-                    var a = data;
                     var options = [];
 
                     for (var a of data) {
