--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                         $('#articles').append(
                             '<a href="http://localhost:8080/article/' + img.propietats.article.id + '/' + img.propietats.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
                             '<span class="text-end h2 text-pc-economic-default bold col-12">' + img.propietats.preu + ' € </span>' +
-                            '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="card-img-top col-12 object-fit-cover" alt="img">' +
+                            '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="card-img-top col-6" alt="img">' +
                             '<div class="col-12 justify-content-center row">' +
                             '<div id="' + img.propietats.id + '" class="row justify-content-around col-12"></div>' +
                             '<div class="text-start h3 col-12"> <p>' + img.propietats.article.nom + '</p></div>' +
