--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -67,7 +67,7 @@
                             </a>
                         </li>
                         <li class="nav-item d-flex justify-content-center ">
-                            <a class="nav-link btn btn-pc-economic-dark mt-1" href="/">
+                            <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/carrito}" >
                                 <i class="bi bi-cart4"></i>
                             </a>
                         </li>
