changed in front

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -3,11 +3,12 @@
     <head th:replace="layout/layout :: head"></head>
     <body>
         <header th:replace="layout/layout :: navbar"></header>
-        <main>
+        <main class="container bg-cont mt-md-5 mt-5">
+            <h1>Carrito</h1>
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col"></th>
                     <th scope="col">Nom</th>
                     <th scope="col">Preu</th>
                     <th scope="col">Quantitat</th>
