--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -4,7 +4,7 @@
     <body>
         <header th:replace="layout/layout :: navbar"></header>
         <main class="container bg-cont mt-md-5 mt-5">
-            <h1>Carrito</h1>
+            <h1 class="mt-3 text-center">Carrito</h1>
             <table class="table">
                 <thead>
                 <tr>
