--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -34,7 +34,7 @@
                 </div>
                 <!-- Cercador -->
                 <div class="order-2 col-xs-8 col-7 d-flex">
-                    <div class="my-auto col-10">
+                    <div class="my-auto col-9 col-xl-11">
                         <select id="cercador">
                             <option disabled selected>Buscador</option>
                         </select>
