--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -7,37 +7,42 @@
             <h1 class="mt-3 text-center">Carrito</h1>
             <table class="table">
                 <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Nom</th>
-                    <th scope="col">Preu</th>
-                    <th scope="col">Quantitat</th>
-                    <th scope="col">Total</th>
-                    <th scope="col">Acciones</th>
-                </tr>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Preu</th>
+                        <th scope="col">Quantitat</th>
+                        <th scope="col">Total</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr th:each="carro : ${carrito.ids}">
-                    <td>
-                        <img class="width-minicards-carrito object-fit-cover mb-1"
-                             th:src="@{/img/productes/{article}/{prop}/0.jpg(article=${carro.propietats.article.id},prop=${carro.propietats.id})}">
-                    </td>
-                    <td th:text="${carro.propietats.article.nom}"></td>
-                    <td th:text="${carro.propietats.preu}"></td>
-                    <td>
-                        <form th:action="@{/updatecarrito}" method="get"  class="row">
-                            <input type="hidden" hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
-                            <input id="quantitat" name="quantitat" class="col" type="number" min="1" th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
-                            <button type="submit" class="btn btn-pc-economic-light col"><i class="bi bi-arrow-clockwise"></i></button>
-                        </form>
-                    </td>
-                    <td th:text="${carro.price}"></td>
-                    <td>
-                        <form th:action="@{/deletecarrito}" method="get">
-                            <input hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
-                            <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
-                        </form>
-                </tr>
+                    <tr th:each="carro : ${carrito.ids}">
+                        <td>
+                            <img class="width-minicards-carrito object-fit-cover mb-1"
+                                 th:src="@{/img/productes/{article}/{prop}/0.jpg(article=${carro.propietats.article.id},prop=${carro.propietats.id})}">
+                        </td>
+                        <td>
+                            <div th:text="${carro.propietats.article.nom}"> </div>
+                        </td>
+                        <td th:text="${carro.propietats.preu}"></td>
+                        <td>
+                            <form th:action="@{/updatecarrito}" method="get" class="row">
+                                <input type="hidden" hidden="hidden" th:name="idprops"
+                                       th:value="${carro.propietats.id}">
+                                <input id="quantitat" name="quantitat" class="col" type="number" min="1"
+                                       th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
+                                <button type="submit" class="btn btn-pc-economic-light col"><i
+                                        class="bi bi-arrow-clockwise"></i></button>
+                            </form>
+                        </td>
+                        <td th:text="${carro.price}"></td>
+                        <td>
+                            <form th:action="@{/deletecarrito}" method="get">
+                                <input hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
+                                <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                            </form>
+                    </tr>
                 </tbody>
             </table>
             <div class="d-flex flex-row-reverse">
