--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout.html :: head"></head>
+    <head th:replace="layout/layout.html :: head">
+    </head>
+    <head>
+        <title th:text="' Index | PCEconomic'"></title>
+    </head>
+
+    <nav th:replace="layout/layout.html :: navbar"/>
     <body class="bgbd">
-        <header th:replace="layout/layout.html :: header"></header>
         <main class="container-lg bg-cont mt-md-5 mt-1">
             <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
             <section id="productes" class="row mt-5 justify-content-center">
