fix: carrito not formatting numbers correctly

--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout.html :: head">
-    </head>
+    <head th:replace="layout/layout.html :: head"></head>
     <head>
         <title th:text="' Index | PCEconomic'"></title>
     </head>
