--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
         <title th:text="' Index | PCEconomic'"></title>
     </head>
 
-    <nav th:replace="layout/layout.html :: navbar"/>
+    <nav th:replace="layout/layout.html :: navbar"></nav>
     <body class="bgbd">
         <main class="container-lg bg-cont mt-md-5 mt-1">
             <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
@@ -46,10 +46,10 @@
                         $('#articles').append(
                             '<a href="http://localhost:8080/article/' + img.propietats.article.id + '/' + img.propietats.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
                             '<span class="text-end h2 text-pc-economic-default bold col-12">' + img.propietats.preu + ' € </span>' +
-                            '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="card-img-top col-6" alt="img">' +
+                            '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="col-5" alt="img">' +
                             '<div class="col-12 justify-content-center row">' +
-                            '<div id="' + img.propietats.id + '" class="row justify-content-around col-12"></div>' +
-                            '<div class="text-start h3 col-12"> <p>' + img.propietats.article.nom + '</p></div>' +
+                            '<div id="' + img.propietats.id + '" class="row justify-content-evenly col-12"></div>' +
+                            '<div class="text-start h4 col-12"> <p>' + img.propietats.article.nom + '</p></div>' +
                             '<span class="text-success col-12 text-start mb-2"> Recíbelo mañana </span>' +
                             '</div>' +
                             '</div>' +
