fix: carrito wasn't fully responsive

--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -94,6 +94,10 @@
   border: 1px solid #282828;
 }
 
+.inputSize {
+  width: 75px;
+}
+
 $pc-economic-dark: #4c0bce;
 $pc-economic-default: #712cf9;
 $pc-economic-light: #8b5fff;
