--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -5,7 +5,7 @@
         <header th:replace="layout/layout :: navbar"></header>
         <main class="container bg-cont mt-md-5 mt-5">
             <h1 class="mt-3 text-center">Carrito</h1>
-            <div class="col-12">
+            <div class="col-12 table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
@@ -28,14 +28,17 @@
                             </td>
                             <td th:text="${carro.propietats.preu}"></td>
                             <td>
-                                <form th:action="@{/updatecarrito}" method="get" class="row">
-                                    <input type="hidden" hidden="hidden" th:name="idprops"
-                                           th:value="${carro.propietats.id}">
-                                    <input id="quantitat" name="quantitat" class="col" type="number" min="1"
-                                           th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
-                                    <button type="submit" class="btn btn-pc-economic-light col"><i
-                                            class="bi bi-arrow-clockwise"></i></button>
-                                </form>
+                                <div class="row">
+                                    <form th:action="@{/updatecarrito}" method="get">
+                                        <input type="hidden" hidden="hidden" th:name="idprops"
+                                               th:value="${carro.propietats.id}">
+                                        <input id="quantitat" name="quantitat" class="inputSize" type="number" min="1"
+                                               th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
+                                        <button type="submit" class="btn btn-pc-economic-light"><i
+                                                class="bi bi-arrow-clockwise"></i></button>
+                                    </form>
+                                </div>
+
                             </td>
                             <td th:text="${carro.price}"></td>
                             <td>
