fix(article) v0.0.13-snapshot little changes

--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -10,9 +10,9 @@
                     <thead>
                         <tr>
                             <th scope="col"></th>
-                            <th scope="col">Nom</th>
-                            <th scope="col">Preu</th>
-                            <th scope="col">Quantitat</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Cantidad</th>
                             <th scope="col">Total</th>
                             <th scope="col">Acciones</th>
                         </tr>
