--- a/public/PCEconomic/src/main/resources/templates/categoria.html
+++ b/public/PCEconomic/src/main/resources/templates/categoria.html
@@ -8,7 +8,7 @@
             <section id="productes" class="row mt-5 justify-content-center">
                 <div id="articles" class="row mt-2 justify-content-center mb-2">
                     <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                        <span class="visually-hidden">Loading...</span>
+                        <span class="visually-hidden">Cargando...</span>
                     </div>
                 </div>
             </section>
