--- a/public/PCEconomic/src/main/resources/templates/error.html
+++ b/public/PCEconomic/src/main/resources/templates/error.html
@@ -5,7 +5,8 @@
         <header th:replace="layout/layout.html :: header"></header>
         <main class="container text-center">
             <h1>ERROR 404</h1>
-            <p>La página que buscas no existe</p>
+            <h2>La página que buscas no existe o ha sido eliminada</h2>
+            <a href="/" class="btn btn-primary">Volver a la página principal</a>
         </main>
         <footer th:replace="layout/layout.html :: footer"></footer>
     </body>
