--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                 <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
                 <div id="articles" class="row mt-2 justify-content-center mb-2">
                     <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                        <span class="visually-hidden">Loading...</span>
+                        <span class="visually-hidden">Cargando...</span>
                     </div>
                 </div>
             </section>
@@ -43,7 +43,7 @@
                 for (var img of resp) {
                     if (img.principal === true && img.propietats.esPrincipal === true) {
                         $('#articles').append(
-                            '<a href="http://localhost:8080/article/' + img.propietats.article.id + '/' + img.propietats.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
+                            '<a href="/article/' + img.propietats.article.id + '/' + img.propietats.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
                             '<span class="text-end h2 text-pc-economic-default bold col-12">' + img.propietats.preu + ' € </span>' +
                             '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="col-5" alt="img">' +
                             '<div class="col-12 justify-content-center row">' +
@@ -57,8 +57,8 @@
                         for (var i of articles) {
                             if (i.principal === true && i.propietats.esPrincipal === false && i.propietats.article.id === img.propietats.article.id) {
                                 $('#' + img.propietats.id).append(
-                                    '<a class="col-3 mt-2 mb-2 row"' +
-                                    ' href="http://localhost:8080/article/' + i.propietats.article.id + '/' + i.propietats.id
+                                    '<a class="col-4 mt-2 mb-2 row"' +
+                                    ' href="/article/' + i.propietats.article.id + '/' + i.propietats.id
                                     + '"> <img src="/img/productes/' + i.propietats.article.id + '/' + i.propietats.id + '/' + i.path + '" class="col-12" alt="img"> </a>'
                                 );
                             }
