--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
   <head th:replace="layout/layout :: head">
   </head>
   <body class="container text-center">
-    <h1>Login</h1>
+    <h1>Iniciar sesión</h1>
     <div th:if="${param.error}">
       Invalid username and password.
     </div>
@@ -11,10 +11,14 @@
       You have been logged out.
     </div>
     <form th:action="@{/login}" method="post">
-      <div><label> User Name : <input type="text" name="username"/> </label></div>
-      <div><label> Password: <input type="password" name="password"/> </label></div>
-      <div><input class=" btn btn-pc-economic-light" type="submit" value="Sign In"/></div>
+      <div><label> Email : <input type="text" name="username"/> </label></div>
+      <div><label> Contraseña : <input type="password" name="password"/> </label></div>
+      <div><input class=" btn btn-pc-economic-light" type="submit" value="Entrar"/></div>
     </form>
+    <div>
+      <a href="/register">Registrarse</a>
+      <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+    </div>
 
     <footer th:replace="layout/layout :: footer"></footer>
   </body>
