--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
-    <body>
-      <form th:action="@{/register}" method="post">
-
-      </form>
-    </body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <form th:action="@{/register}" th:object="${registerForm}" method="post">
+        <div>
+            <label>Nombre: <input type="text" th:field="*{name}"/></label>
+        </div>
+        <div>
+            <label>Email: <input type="text" th:field="*{email}"/></label>
+        </div>
+        <div>
+            <label>Contraseña: <input type="password" th:field="*{password}"/></label>
+        </div>
+        <div>
+            <label>Confirmar contraseña: <input type="password" th:field="*{password}"/></label>
+        </div>
+        <div>
+            <input type="submit" value="Registrarse"/>
+        </div>
+    </form>
+</body>
 </html>
