--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -191,6 +191,18 @@
                     }
                 },
             });
+            /*
+            $.ajax({
+                url: "/api/idiomes",
+                type: "GET",
+                success: function (data) {
+                    for (var i of data) {
+                        $("#idiomes").append(
+                            '<option value="' + i.id + '">' + i.nom + "</option>"
+                        );
+                    }
+                },
+            });*/
         </script>
     </div>
 </html>
