--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -7,11 +7,27 @@
     <nav th:replace="layout/layout.html :: navbar"></nav>
     <body class="bgbd">
         <main class="container-lg bg-cont mt-md-5 mt-1">
-            
+            <input type="text" class="form-control" id="destination-input" placeholder="Enter a destination location">
         </main>
         <footer th:replace="layout/layout.html :: footer"></footer>
     </body>
     <div th:replace="layout/layout.html :: jquery"></div>
+
     <script>
+        // Como hacer un input para introducir la direccion de enviq y que te de la distancia
+        $.ajax({
+            url: "https://maps.googleapis.com/maps/api/distancematrix/json?origins=Manacor&destinations=Inca,%20Mallorca,%20Spain&units=imperial&key=AIzaSyA7sDeOoFe2KTvrHeePf3zn43NMrGzVzX",
+            type: "GET",
+            dataType: "json",
+            success: function (resp) {
+                console.log(resp)
+                console.log(JSON.stringify(resp));
+            },
+            error: function (err) {
+                console.log(err);
+            }
+
+        });
     </script>
+
 </html>
