Trying to send request to google Maps but not found

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -13,10 +13,12 @@
     </body>
     <div th:replace="layout/layout.html :: jquery"></div>
 
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
     <script>
         // Como hacer un input para introducir la direccion de enviq y que te de la distancia
+
         $.ajax({
-            url: "https://maps.googleapis.com/maps/api/distancematrix/json?origins=Manacor&destinations=Inca,%20Mallorca,%20Spain&units=imperial&key=AIzaSyA7sDeOoFe2KTvrHeePf3zn43NMrGzVzX",
+            url: "",
             type: "GET",
             dataType: "json",
             success: function (resp) {
