--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -14,20 +14,20 @@
     <div th:replace="layout/layout.html :: jquery"></div>
 
     <script>
-        // Como hacer un input para introducir la direccion de enviq y que te de la distancia
+
+        $("#destination-input").on("change", function () {
+            var destination = $("#destination-input").val();
+            destination = destination.replaceAll(" ", "%20");
+            console.log(destination);
+        });
 
         $.ajax({
             url: "/maps",
             type: "GET",
             dataType: "json",
             success: function (resp) {
-                console.log(resp)
-                console.log(JSON.stringify(resp));
-            },
-            error: function (err) {
-                console.log(err);
+                console.log(resp);
             }
-
         });
     </script>
 
