--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head">
 </head>
 <body class="container text-center">
@@ -10,9 +10,9 @@
     <div th:if="${param.logout}">
         You have been logged out.
     </div>
-    <form th:action="@{/login}" method="post">
-        <div><label> Email : <input type="text" name="username"/> </label></div>
-        <div><label> Contraseña : <input type="password" name="password"/> </label></div>
+    <form th:action="@{/login}" th:object="${loginForm}" method="post">
+        <div><label> Email : <input type="text" name="username" th:field="*{email}"/> </label></div>
+        <div><label> Contraseña : <input type="password" name="password" th:field="*{password}"/> </label></div>
         <div><input class=" btn btn-pc-economic-light" type="submit" value="Entrar"/></div>
     </form>
     <div>
