feat: started with spring boot validations when someone registers

--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -16,6 +16,9 @@
             <label>Contraseña: <input type="password" th:field="*{password}"/></label>
         </div>
         <div>
+            <label>Confirmar contraseña: <input type="password" th:field="*{confirmPassword}"/></label>
+        </div>
+        <div>
             <input type="submit" value="Registrarse"/>
         </div>
     </form>
