Changed the api/articles now all not is functional

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -19,11 +19,11 @@
             getDistance($("#destination-input").val());
         });
 
-        function getDistance(dest){
+        function getDistance(destination){
             $.ajax({
                 url: "/maps",
                 type: "POST",
-                data: {dest: dest},
+                data: {destination: destination},
                 success: function (response) {
                     console.log(JSON.parse(response));
                 },
