--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -38,33 +38,11 @@
             complete: function() {
                 $("#loading-wheel").hide();
             },
-            success: function (resp) {
-                var articles = resp;
-                for (var img of resp) {
-                    if (img.principal === true && img.propietats.esPrincipal === true) {
-                        $('#articles').append(
-                            '<a href="/article/' + img.propietats.article.id + '/' + img.propietats.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
-                            '<span class="text-end h2 text-pc-economic-default bold col-12">' + img.propietats.preu + ' € </span>' +
-                            '<img src="/img/productes/' + img.propietats.article.id + '/' + img.propietats.id + '/' + img.path + '" class="col-5" alt="img">' +
-                            '<div class="col-12 justify-content-center row">' +
-                            '<div id="' + img.propietats.id + '" class="row justify-content-evenly col-12"></div>' +
-                            '<div class="text-start h4 col-12"> <p>' + img.propietats.article.nom + '</p></div>' +
-                            '<span class="text-success col-12 text-start mb-2"> Recíbelo mañana </span>' +
-                            '</div>' +
-                            '</div>' +
-                            '</a>'
-                        );
-                        for (var i of articles) {
-                            if (i.principal === true && i.propietats.esPrincipal === false && i.propietats.article.id === img.propietats.article.id) {
-                                $('#' + img.propietats.id).append(
-                                    '<a class="col-4 mt-2 mb-2 row"' +
-                                    ' href="/article/' + i.propietats.article.id + '/' + i.propietats.id
-                                    + '"> <img src="/img/productes/' + i.propietats.article.id + '/' + i.propietats.id + '/' + i.path + '" class="col-12" alt="img"> </a>'
-                                );
-                            }
-                        }
-                    }
+            success: function (articles) {
+                for (var art in articles) {
+                    console.log(articles[art]);
                 }
+
             },
         });
     </script>
