--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -2,7 +2,11 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head">
 </head>
+<head>
+    <title>Login | PCEconomic</title>
+</head>
 <body class="container text-center">
+    <header th:replace="layout/layout :: navbar"></header>
     <h1>Iniciar sesión</h1>
     <div th:if="${param.error}">
         Invalid username and password.
