--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,49 +1,84 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout.html :: head"></head>
-    <head>
-        <title th:text="' Index | PCEconomic'"></title>
-    </head>
+<head th:replace="layout/layout.html :: head"></head>
+<head>
+    <title th:text="' Index | PCEconomic'"></title>
+</head>
 
-    <nav th:replace="layout/layout.html :: navbar"></nav>
-    <body class="bgbd">
-        <main class="container-lg bg-cont mt-md-5 mt-1">
-            <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
-            <section id="productes" class="row mt-5 justify-content-center">
-                <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
-                <div id="articles" class="row mt-2 justify-content-center mb-2">
-                    <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                        <span class="visually-hidden">Cargando...</span>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer th:replace="layout/layout.html :: footer"></footer>
-    </body>
-    <div th:replace="layout/layout.html :: jquery"></div>
-    <script>
-        (function($) {
-            $('#foo').bind('click', function() {
-                alert('User clicked on "foo."');
-            });
-        })(jQuery);
-
-        $.ajax({
-            url: "api/articles",
-            type: "GET",
-            dataType: "json",
-            beforeSend: function() {
-                $("#loading-wheel").show();
-            },
-            complete: function() {
-                $("#loading-wheel").hide();
-            },
-            success: function (articles) {
-                for (var art in articles) {
-                    console.log(articles[art]);
-                }
-
-            },
+<nav th:replace="layout/layout.html :: navbar"></nav>
+<body class="bgbd">
+<main class="container-lg bg-cont mt-md-5 mt-1">
+    <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
+    <section id="productes" class="row mt-5 justify-content-center">
+        <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
+        <div id="articles" class="row mt-2 justify-content-center mb-2">
+            <div class="spinner-border text-secondary" role="status" id="loading-wheel">
+                <span class="visually-hidden">Cargando...</span>
+            </div>
+        </div>
+    </section>
+</main>
+<footer th:replace="layout/layout.html :: footer"></footer>
+</body>
+<div th:replace="layout/layout.html :: jquery"></div>
+<script>
+    (function ($) {
+        $('#foo').bind('click', function () {
+            alert('User clicked on "foo."');
         });
-    </script>
+    })(jQuery);
+
+    $.ajax({
+        url: "api/propietats",
+        type: "GET",
+        dataType: "json",
+        beforeSend: function () {
+            $("#loading-wheel").show();
+        },
+        complete: function () {
+            $("#loading-wheel").hide();
+        },
+        success: function (resp) {
+            console.log(resp)
+            var imgAux = "";
+            for (var prop of resp) {
+                // recorremos las imagenes de cada propietat para buscar la principal
+                for (var img of prop.imatges) {
+                    if (img.principal === true) {
+                        imgAux = img.path;
+                    }
+                }
+                if (prop.esPrincipal === true) {
+                    $('#articles').append(
+                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
+                        '<span class="text-end h2 text-pc-economic-default bold col-12">' + prop.preu + ' € </span>' +
+                        '<img src="/img/productes/' + prop.article.id + '/' + prop.id + '/' + imgAux + '" class="col-5" alt="img">' +
+                        '<div class="col-12 justify-content-center row">' +
+                        '<div id="' + prop.id + '" class="row justify-content-evenly col-12"></div>' +
+                        '<div class="text-start h4 col-12"> <p>' + prop.article.nom + '</p></div>' +
+                        '<span class="text-success col-12 text-start mb-2"> Recíbelo mañana </span>' +
+                        '</div>' +
+                        '</div>' +
+                        '</a>'
+                    );
+                }
+                for (props of resp){
+                    for (var i of props.imatges) {
+                        if (i.principal === true) {
+                            imgAux = i.path;
+                        }
+                    }
+                    if (props.esPrincipal === false && props.article.id === prop.article.id) {
+                        $('#' + prop.id).append(
+                            '<a class="col-4 mt-2 mb-2 row"' +
+                            ' href="/article/' + prop.article.id + '/' + props.id
+                            + '"> <img src="/img/productes/' + prop.article.id + '/' + props.id + '/' + imgAux + '" class="col-12" alt="img"> </a>'
+                        );
+                    }
+                }
+                imgAux = ""; // reiniciamos la variable auxiliar
+            }
+        },
+    });
+</script>
 </html>
